--- a/index.html
+++ b/index.html
@@ -713,6 +713,8 @@ function buildStaticObs(o){
   if(o.type==='rect')return{type:'rect',px:o.x*W,py:o.y*H,pw:o.w*W,ph:o.h*H};
   if(o.type==='circle')return{type:'circle',cx:o.x*W,cy:o.y*H,cr:o.r*Math.min(W,H)};
   if(o.type==='diagonal'){const x1=o.x1*W,y1=o.y1*H,x2=o.x2*W,y2=o.y2*H,thick=o.thickness*Math.min(W,H);return{type:'diagonal',x1,y1,x2,y2,thick};}
+  if(o.type==='pipe-in')return{type:'pipe-in',cx:o.x*W,cy:o.y*H,cr:(o.r||0.04)*Math.min(W,H),linkedTo:o.linkedTo||null};
+  if(o.type==='pipe-out')return{type:'pipe-out',cx:o.x*W,cy:o.y*H,cr:(o.r||0.04)*Math.min(W,H),_rawId:o.id||null};
   return null;
 }
 
@@ -780,6 +782,22 @@ function update(dt,ts){
     if(bd<o.range&&bd>1){const str=o.force*(1-bd/o.range);puck.vx+=Math.cos(o.dir)*str*dt;puck.vy+=Math.sin(o.dir)*str*dt;}
   });
 
+  // Pipe teleportation
+  let teleported=false;
+  staticObs.forEach(o=>{
+    if(teleported||o.type!=='pipe-in'||!o.linkedTo)return;
+    const d=Math.hypot(puck.x-o.cx,puck.y-o.cy);
+    if(d<o.cr*0.85){
+      const exit=staticObs.find(e=>e.type==='pipe-out'&&e._rawId===o.linkedTo);
+      if(exit){
+        puck.x=exit.cx;puck.y=exit.cy;
+        teleported=true;
+        triggerShake();
+        for(let i=0;i<10;i++){const a=Math.random()*Math.PI*2,s=80+Math.random()*180;particles.push({x:exit.cx,y:exit.cy,vx:Math.cos(a)*s,vy:Math.sin(a)*s,life:1,decay:3+Math.random()*2,r:1.5+Math.random()*2.5,type:'spark',color:'#a78bfa'});}
+      }
+    }
+  });
+
   updateDistHud();
 
   const hd=Math.hypot(puck.x-hole.x,puck.y-hole.y);
@@ -840,6 +858,7 @@ function resolveStaticCollision(o,rest){
   if(o.type==='rect')resolveRectCollision(o.px,o.py,o.pw,o.ph,0,0,rest);
   if(o.type==='circle')resolveCircleCollision(o.cx,o.cy,o.cr,0,0,rest);
   if(o.type==='diagonal')resolveCapsuleCollision(o.x1,o.y1,o.x2,o.y2,o.thick,0,0,rest);
+  // pipe-in and pipe-out are not solid — handled separately
 }
 function resolveDynamicCollision(o,rest){
   const vx=o.velX||0,vy=o.velY||0;
@@ -971,6 +990,29 @@ function drawStaticObs(o){
     const g=ctx.createLinearGradient(o.x1+nx*o.thick,o.y1+ny*o.thick,o.x1-nx*o.thick,o.y1-ny*o.thick);g.addColorStop(0,'#605e5c');g.addColorStop(0.45,'#484644');g.addColorStop(1,'#272524');
     ctx.beginPath();ctx.moveTo(o.x1,o.y1);ctx.lineTo(o.x2,o.y2);ctx.strokeStyle=g;ctx.lineWidth=o.thick*2;ctx.stroke();
     ctx.beginPath();ctx.moveTo(o.x1,o.y1);ctx.lineTo(o.x2,o.y2);ctx.strokeStyle='rgba(255,255,255,0.1)';ctx.lineWidth=Math.max(1.5,o.thick*0.4);ctx.stroke();
+  }
+  else if(o.type==='pipe-in'||o.type==='pipe-out'){
+    const isIn=o.type==='pipe-in';
+    const col=isIn?'#22d3ee':'#a78bfa';
+    const col2=isIn?'#0891b2':'#7c3aed';
+    const {cx,cy,cr}=o;
+    const pulse=0.5+0.5*Math.sin(performance.now()/350+(isIn?0:Math.PI));
+    ctx.shadowColor=col;ctx.shadowBlur=10+pulse*16;
+    ctx.beginPath();ctx.arc(cx,cy,cr,0,Math.PI*2);
+    const g=ctx.createRadialGradient(cx-cr*.3,cy-cr*.3,cr*.1,cx,cy,cr);
+    g.addColorStop(0,col);g.addColorStop(1,col2);
+    ctx.fillStyle=g;ctx.fill();
+    ctx.strokeStyle=`rgba(255,255,255,${0.25+pulse*0.25})`;ctx.lineWidth=1.5;ctx.stroke();
+    ctx.strokeStyle='#fff';ctx.lineWidth=Math.max(1.5,cr*.1);ctx.lineCap='round';
+    if(isIn){
+      ctx.beginPath();ctx.moveTo(cx,cy-cr*.4);ctx.lineTo(cx,cy+cr*.4);
+      ctx.moveTo(cx-cr*.3,cy+cr*.1);ctx.lineTo(cx,cy+cr*.4);ctx.lineTo(cx+cr*.3,cy+cr*.1);
+      ctx.stroke();
+    } else {
+      ctx.beginPath();ctx.moveTo(cx,cy+cr*.4);ctx.lineTo(cx,cy-cr*.4);
+      ctx.moveTo(cx-cr*.3,cy-cr*.1);ctx.lineTo(cx,cy-cr*.4);ctx.lineTo(cx+cr*.3,cy-cr*.1);
+      ctx.stroke();
+    }
   }
   ctx.restore();
 }
