--- a/index.html
+++ b/index.html
@@ -591,6 +591,7 @@ const DEFAULT_LEVELS=[
   {name:"Straight Shot",par:2,puck:{x:0.12,y:0.5},hole:{x:0.85,y:0.5},obstacles:[{type:'rect',x:0.45,y:0.25,w:0.06,h:0.22},{type:'rect',x:0.45,y:0.53,w:0.06,h:0.22}],moving:[]},
   {name:"The Diagonal",par:3,puck:{x:0.1,y:0.8},hole:{x:0.88,y:0.2},obstacles:[{type:'diagonal',x1:0.25,y1:0.1,x2:0.25,y2:0.7,thickness:0.04},{type:'diagonal',x1:0.5,y1:0.3,x2:0.85,y2:0.65,thickness:0.04},{type:'circle',x:0.65,y:0.2,r:0.055}],moving:[]},
   {name:"Windmill",par:3,puck:{x:0.1,y:0.5},hole:{x:0.88,y:0.5},obstacles:[{type:'rect',x:0.3,y:0.0,w:0.05,h:0.38},{type:'rect',x:0.3,y:0.62,w:0.05,h:0.38}],moving:[{type:'windmill',x:0.62,y:0.5,blades:4,length:0.18,width:0.025,speed:1.2}]},
+  {name:"Warp Pipe",par:3,puck:{x:0.1,y:0.5},hole:{x:0.88,y:0.5},obstacles:[{type:'rect',x:0.38,y:0.0,w:0.05,h:0.38},{type:'rect',x:0.38,y:0.62,w:0.05,h:0.38},{type:'pipe-in',x:0.55,y:0.5,r:0.05,linkedTo:9001,id:9000},{type:'pipe-out',x:0.72,y:0.25,r:0.05,id:9001}],moving:[]},
   {name:"Orbit",par:4,puck:{x:0.1,y:0.5},hole:{x:0.88,y:0.5},obstacles:[{type:'circle',x:0.35,y:0.5,r:0.06},{type:'circle',x:0.62,y:0.5,r:0.06}],moving:[{type:'orbit',shape:'circle',x:0.35,y:0.5,r:0.035,orbitR:0.2,orbitSpeed:1.4,orbitPhase:0},{type:'orbit',shape:'circle',x:0.62,y:0.5,r:0.035,orbitR:0.2,orbitSpeed:-1.0,orbitPhase:1.6}]},
   {name:"Chaos",par:5,puck:{x:0.08,y:0.85},hole:{x:0.88,y:0.15},obstacles:[{type:'diagonal',x1:0.22,y1:0.0,x2:0.22,y2:0.6,thickness:0.035},{type:'diagonal',x1:0.45,y1:0.4,x2:0.75,y2:0.7,thickness:0.035},{type:'circle',x:0.7,y:0.25,r:0.05}],moving:[{type:'windmill',x:0.38,y:0.75,blades:3,length:0.14,width:0.022,speed:1.8},{type:'orbit',shape:'rect',x:0.6,y:0.5,w:0.06,h:0.025,orbitR:0.18,orbitSpeed:2.0,orbitPhase:0},{type:'rect',x:0.55,y:0.1,w:0.05,h:0.15,axis:'y',range:0.4,speed:1.3}]},
   {name:"Blowout",par:3,puck:{x:0.1,y:0.5},hole:{x:0.88,y:0.5},obstacles:[{type:"rect",x:0.4,y:0.0,w:0.05,h:0.38},{type:"rect",x:0.4,y:0.62,w:0.05,h:0.38}],moving:[{type:"blower",x:0.25,y:0.5,direction:270,force:1.2,range:0.28},{type:"blower",x:0.65,y:0.22,direction:0,force:0.9,range:0.2}]}
@@ -753,9 +754,50 @@ function startGame(){
 // ═══════════════════════════════════════════════════════════
 // UPDATE
 // ═══════════════════════════════════════════════════════════
+let pipeTransitTime=0,pipeTransitExit=null,pipeTransitEntry=null,pipeTransitCooldown=0;
+let pipeTransitExitX=null,pipeTransitExitY=null,pipeEmergeParticlesDone=false;
+const PIPE_SINK_DUR=320,PIPE_EMERGE_DUR=420;
+
 function update(dt,ts){
   updateParticles(dt);
   updateDynamicObs(dt,ts);
+
+  // Pipe transit animation
+  if(state==='pipe-transit'){
+    const elapsed=performance.now()-pipeTransitTime;
+    if(elapsed<PIPE_SINK_DUR){
+      // Phase 1: shrink into entrance
+      if(pipeTransitEntry){
+        puck.x+=(pipeTransitEntry.cx-puck.x)*0.3;
+        puck.y+=(pipeTransitEntry.cy-puck.y)*0.3;
+      }
+    } else if(elapsed<PIPE_SINK_DUR+PIPE_EMERGE_DUR){
+      // Phase 2: grow out of exit
+      if(pipeTransitExitX!==null){
+        puck.x=pipeTransitExitX;
+        puck.y=pipeTransitExitY;
+        // Spawn particles near the start of emerge
+        const emergeT=(elapsed-PIPE_SINK_DUR)/PIPE_EMERGE_DUR;
+        if(emergeT<0.08&&!pipeEmergeParticlesDone){
+          pipeEmergeParticlesDone=true;
+          for(let i=0;i<16;i++){const a=Math.random()*Math.PI*2,s=120+Math.random()*250;particles.push({x:pipeTransitExitX,y:pipeTransitExitY,vx:Math.cos(a)*s,vy:Math.sin(a)*s-80,life:1,decay:2.5+Math.random()*2,r:2+Math.random()*3,type:'spark',color:`hsl(${270+Math.random()*40},80%,${60+Math.random()*30}%)`});}
+        }
+      }
+    } else {
+      // Phase 3: done
+      if(pipeTransitExitX!==null){
+        puck.x=pipeTransitExitX;
+        puck.y=pipeTransitExitY;
+      }
+      puck.vx=0;puck.vy=-300;
+      pipeTransitCooldown=performance.now()+600;
+      pipeEmergeParticlesDone=false;
+      state='sliding';
+      pipeTransitEntry=null;pipeTransitExit=null;pipeTransitExitX=null;pipeTransitExitY=null;
+    }
+    return;
+  }
+
   if(state!=='sliding')return;
 
   const FRICTION=1.1,WALL_REST=0.72,OBS_REST=0.62,STOP_SPEED=30;
@@ -782,21 +824,36 @@ function update(dt,ts){
     if(bd<o.range&&bd>1){const str=o.force*(1-bd/o.range);puck.vx+=Math.cos(o.dir)*str*dt;puck.vy+=Math.sin(o.dir)*str*dt;}
   });
 
-  // Pipe teleportation
-  let teleported=false;
+  // Pipe gravity wells — pull puck toward entrance like the golf hole
+  let pipeSunk=false;
   staticObs.forEach(o=>{
-    if(teleported||o.type!=='pipe-in'||!o.linkedTo)return;
-    const d=Math.hypot(puck.x-o.cx,puck.y-o.cy);
-    if(d<o.cr*0.85){
-      const exit=staticObs.find(e=>e.type==='pipe-out'&&e._rawId===o.linkedTo);
-      if(exit){
-        puck.x=exit.cx;puck.y=exit.cy;
-        teleported=true;
+    if(pipeSunk||o.type!=='pipe-in'||performance.now()<pipeTransitCooldown)return;
+    const pd=Math.hypot(puck.x-o.cx,puck.y-o.cy);
+    const pullRange=o.cr*2.2;
+    if(pd<pullRange){
+      // Gentle gravity pull within range
+      const strength=0.1*(1-pd/pullRange);
+      puck.vx+=(o.cx-puck.x)*strength;puck.vy+=(o.cy-puck.y)*strength;
+      if(pd<o.cr*0.55){
+        // Snap to centre and sink
+        pipeSunk=true;
+        state='pipe-transit';
+        pipeTransitTime=performance.now();
+        pipeEmergeParticlesDone=false;
+        let exit=o.linkedTo!=null?staticObs.find(e=>e.type==='pipe-out'&&e._rawId==o.linkedTo):null;
+        if(!exit) exit=staticObs.find(e=>e.type==='pipe-out')||null;
+        pipeTransitExit=exit||null;
+        pipeTransitExitX=exit?exit.cx:null;
+        pipeTransitExitY=exit?exit.cy:null;
+        pipeTransitEntry={cx:o.cx,cy:o.cy,cr:o.cr};
+        puck.x=o.cx;puck.y=o.cy;
+        puck.vx=0;puck.vy=0;puckTrail=[];
         triggerShake();
-        for(let i=0;i<10;i++){const a=Math.random()*Math.PI*2,s=80+Math.random()*180;particles.push({x:exit.cx,y:exit.cy,vx:Math.cos(a)*s,vy:Math.sin(a)*s,life:1,decay:3+Math.random()*2,r:1.5+Math.random()*2.5,type:'spark',color:'#a78bfa'});}
+        playBounce(400);
       }
     }
   });
+  if(pipeSunk)return;
 
   updateDistHud();
 
@@ -925,7 +982,8 @@ function draw(ts){
   drawHole(ts);
   drawPuckTrail();
   if(state==='dragging'&&dragStart&&dragCurrent)drawDragGuide();
-  if(state!=='sunk')drawPuck(ts);
+  if(state==='pipe-transit')drawPipeTransitPuck();
+  else if(state!=='sunk')drawPuck(ts);
   else drawSunkPuck(ts);
   drawParticles();
 }
@@ -992,26 +1050,61 @@ function drawStaticObs(o){
     ctx.beginPath();ctx.moveTo(o.x1,o.y1);ctx.lineTo(o.x2,o.y2);ctx.strokeStyle='rgba(255,255,255,0.1)';ctx.lineWidth=Math.max(1.5,o.thick*0.4);ctx.stroke();
   }
   else if(o.type==='pipe-in'||o.type==='pipe-out'){
-    const isIn=o.type==='pipe-in';
-    const col=isIn?'#22d3ee':'#a78bfa';
-    const col2=isIn?'#0891b2':'#7c3aed';
     const {cx,cy,cr}=o;
-    const pulse=0.5+0.5*Math.sin(performance.now()/350+(isIn?0:Math.PI));
-    ctx.shadowColor=col;ctx.shadowBlur=10+pulse*16;
-    ctx.beginPath();ctx.arc(cx,cy,cr,0,Math.PI*2);
-    const g=ctx.createRadialGradient(cx-cr*.3,cy-cr*.3,cr*.1,cx,cy,cr);
-    g.addColorStop(0,col);g.addColorStop(1,col2);
-    ctx.fillStyle=g;ctx.fill();
-    ctx.strokeStyle=`rgba(255,255,255,${0.25+pulse*0.25})`;ctx.lineWidth=1.5;ctx.stroke();
-    ctx.strokeStyle='#fff';ctx.lineWidth=Math.max(1.5,cr*.1);ctx.lineCap='round';
-    if(isIn){
-      ctx.beginPath();ctx.moveTo(cx,cy-cr*.4);ctx.lineTo(cx,cy+cr*.4);
-      ctx.moveTo(cx-cr*.3,cy+cr*.1);ctx.lineTo(cx,cy+cr*.4);ctx.lineTo(cx+cr*.3,cy+cr*.1);
-      ctx.stroke();
+    const pulse=0.5+0.5*Math.sin(performance.now()/350);
+    if(o.type==='pipe-in'){
+      // ── Entrance: plain dark pit, no coloured rim ──
+      const shadow=ctx.createRadialGradient(cx,cy+cr*0.3,0,cx,cy,cr*3.5);
+      shadow.addColorStop(0,'rgba(0,0,0,0.45)');shadow.addColorStop(0.4,'rgba(0,0,0,0.15)');shadow.addColorStop(1,'rgba(0,0,0,0)');
+      ctx.fillStyle=shadow;ctx.beginPath();ctx.arc(cx,cy,cr*3.5,0,Math.PI*2);ctx.fill();
+      // Dark pit
+      ctx.beginPath();ctx.arc(cx,cy,cr,0,Math.PI*2);
+      const pit=ctx.createRadialGradient(cx,cy-cr*.2,cr*.1,cx,cy+cr*.3,cr*1.2);
+      pit.addColorStop(0,'#020a0d');pit.addColorStop(1,'#0d1a0d');
+      ctx.fillStyle=pit;ctx.fill();
+      // Plain dark rim matching the golf hole style
+      ctx.save();
+      ctx.beginPath();ctx.arc(cx,cy,cr,Math.PI*1.1,Math.PI*1.9);
+      ctx.strokeStyle='rgba(255,255,255,0.18)';ctx.lineWidth=1.5;ctx.stroke();
+      ctx.beginPath();ctx.arc(cx,cy,cr,Math.PI*-0.1,Math.PI*1.1);
+      ctx.strokeStyle='rgba(0,0,0,0.6)';ctx.lineWidth=2;ctx.stroke();
+      ctx.restore();
+      // Subtle green inner glow
+      ctx.save();ctx.beginPath();ctx.arc(cx,cy,cr*0.55,0,Math.PI*2);
+      ctx.fillStyle=`rgba(74,222,128,${0.03+pulse*0.06})`;ctx.fill();ctx.restore();
     } else {
-      ctx.beginPath();ctx.moveTo(cx,cy+cr*.4);ctx.lineTo(cx,cy-cr*.4);
-      ctx.moveTo(cx-cr*.3,cy-cr*.1);ctx.lineTo(cx,cy-cr*.4);ctx.lineTo(cx+cr*.3,cy-cr*.1);
-      ctx.stroke();
+      // ── Exit: top-down pipe cross-section — works at any rotation ──
+      // Outer ground shadow
+      const shadow=ctx.createRadialGradient(cx,cy,cr*0.5,cx,cy,cr*2.8);
+      shadow.addColorStop(0,'rgba(0,0,0,0.4)');shadow.addColorStop(1,'rgba(0,0,0,0)');
+      ctx.fillStyle=shadow;ctx.beginPath();ctx.arc(cx,cy,cr*2.8,0,Math.PI*2);ctx.fill();
+      // Outer pipe ring (metal casing)
+      ctx.beginPath();ctx.arc(cx,cy,cr,0,Math.PI*2);
+      const outerG=ctx.createRadialGradient(cx-cr*.3,cy-cr*.3,cr*.05,cx,cy,cr);
+      outerG.addColorStop(0,'#4a7a4a');outerG.addColorStop(0.5,'#2d5a2d');outerG.addColorStop(1,'#1a3a1a');
+      ctx.fillStyle=outerG;ctx.fill();
+      ctx.strokeStyle=`rgba(134,239,172,${0.5+pulse*0.3})`;ctx.lineWidth=2;ctx.stroke();
+      // Middle ring — pipe wall thickness
+      ctx.beginPath();ctx.arc(cx,cy,cr*0.72,0,Math.PI*2);
+      const wallG=ctx.createRadialGradient(cx-cr*.2,cy-cr*.2,cr*.05,cx,cy,cr*0.72);
+      wallG.addColorStop(0,'#3a6a3a');wallG.addColorStop(1,'#1e481e');
+      ctx.fillStyle=wallG;ctx.fill();
+      ctx.strokeStyle='rgba(0,0,0,0.4)';ctx.lineWidth=1;ctx.stroke();
+      // Inner hollow — dark opening
+      ctx.beginPath();ctx.arc(cx,cy,cr*0.48,0,Math.PI*2);
+      const holeG=ctx.createRadialGradient(cx,cy,0,cx,cy,cr*0.48);
+      holeG.addColorStop(0,'#0a1a0a');holeG.addColorStop(1,'#050d05');
+      ctx.fillStyle=holeG;ctx.fill();
+      // Green glow rising from inside
+      ctx.beginPath();ctx.arc(cx,cy,cr*0.48,0,Math.PI*2);
+      ctx.fillStyle=`rgba(74,222,128,${0.08+pulse*0.15})`;ctx.fill();
+      // Specular highlight top-left
+      ctx.save();
+      ctx.beginPath();ctx.arc(cx-cr*.28,cy-cr*.28,cr*.18,0,Math.PI*2);
+      const spec=ctx.createRadialGradient(cx-cr*.28,cy-cr*.28,0,cx-cr*.28,cy-cr*.28,cr*.18);
+      spec.addColorStop(0,'rgba(255,255,255,0.22)');spec.addColorStop(1,'rgba(255,255,255,0)');
+      ctx.fillStyle=spec;ctx.fill();
+      ctx.restore();
     }
   }
   ctx.restore();
@@ -1158,6 +1251,31 @@ function drawSunkPuck(ts){
   ctx.shadowColor='rgba(0,0,0,0.6)';ctx.shadowBlur=12;
   const g=ctx.createRadialGradient(-puck.r*.32,-puck.r*.36,puck.r*.06,puck.r*.1,puck.r*.1,puck.r*1.1);g.addColorStop(0,'#f5f0e8');g.addColorStop(0.5,'#d0cbc3');g.addColorStop(1,'#8a8480');
   ctx.beginPath();ctx.arc(0,0,puck.r,0,Math.PI*2);ctx.fillStyle=g;ctx.fill();ctx.restore();
+}
+
+function drawPipeTransitPuck(){
+  const elapsed=performance.now()-pipeTransitTime;
+  const r=puck.r;
+  let scale,cx,cy;
+  if(elapsed<PIPE_SINK_DUR){
+    // Shrinking into entrance
+    scale=Math.max(0,1-elapsed/PIPE_SINK_DUR);
+    cx=puck.x;cy=puck.y;
+  } else {
+    // Growing out of exit
+    const t=Math.min((elapsed-PIPE_SINK_DUR)/PIPE_EMERGE_DUR,1);
+    scale=t;
+    cx=pipeTransitExitX!==null?pipeTransitExitX:puck.x;
+    cy=pipeTransitExitY!==null?pipeTransitExitY:puck.y;
+  }
+  if(scale<=0)return;
+  ctx.save();ctx.translate(cx,cy);ctx.scale(scale,scale);
+  ctx.shadowColor='rgba(0,0,0,0.6)';ctx.shadowBlur=12;
+  const g=ctx.createRadialGradient(-r*.32,-r*.36,r*.06,r*.1,r*.1,r*1.1);
+  g.addColorStop(0,'#f7f2ea');g.addColorStop(0.3,'#e8e3db');g.addColorStop(0.7,'#bab5ad');g.addColorStop(1,'#8a8480');
+  ctx.beginPath();ctx.arc(0,0,r,0,Math.PI*2);ctx.fillStyle=g;ctx.fill();
+  ctx.strokeStyle='rgba(255,255,255,0.38)';ctx.lineWidth=1.5;ctx.stroke();
+  ctx.restore();
 }
 
 // ─── DRAG GUIDE ────────────────────────────────────────────
